; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_omap24xxcam.c_vidioc_try_fmt_vid_cap.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_omap24xxcam.c_vidioc_try_fmt_vid_cap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { i32 }
%struct.v4l2_format = type { i32 }
%struct.omap24xxcam_fh = type { %struct.omap24xxcam_device* }
%struct.omap24xxcam_device = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.file*, i8*, %struct.v4l2_format*)* @vidioc_try_fmt_vid_cap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vidioc_try_fmt_vid_cap(%struct.file* %0, i8* %1, %struct.v4l2_format* %2) #0 {
  %4 = alloca %struct.file*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.v4l2_format*, align 8
  %7 = alloca %struct.omap24xxcam_fh*, align 8
  %8 = alloca %struct.omap24xxcam_device*, align 8
  %9 = alloca i32, align 4
  store %struct.file* %0, %struct.file** %4, align 8
  store i8* %1, i8** %5, align 8
  store %struct.v4l2_format* %2, %struct.v4l2_format** %6, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = bitcast i8* %10 to %struct.omap24xxcam_fh*
  store %struct.omap24xxcam_fh* %11, %struct.omap24xxcam_fh** %7, align 8
  %12 = load %struct.omap24xxcam_fh*, %struct.omap24xxcam_fh** %7, align 8
  %13 = getelementptr inbounds %struct.omap24xxcam_fh, %struct.omap24xxcam_fh* %12, i32 0, i32 0
  %14 = load %struct.omap24xxcam_device*, %struct.omap24xxcam_device** %13, align 8
  store %struct.omap24xxcam_device* %14, %struct.omap24xxcam_device** %8, align 8
  %15 = load %struct.omap24xxcam_device*, %struct.omap24xxcam_device** %8, align 8
  %16 = getelementptr inbounds %struct.omap24xxcam_device, %struct.omap24xxcam_device* %15, i32 0, i32 0
  %17 = call i32 @mutex_lock(i32* %16)
  %18 = load %struct.omap24xxcam_device*, %struct.omap24xxcam_device** %8, align 8
  %19 = getelementptr inbounds %struct.omap24xxcam_device, %struct.omap24xxcam_device* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = load %struct.v4l2_format*, %struct.v4l2_format** %6, align 8
  %22 = call i32 @vidioc_int_try_fmt_cap(i32 %20, %struct.v4l2_format* %21)
  store i32 %22, i32* %9, align 4
  %23 = load %struct.omap24xxcam_device*, %struct.omap24xxcam_device** %8, align 8
  %24 = getelementptr inbounds %struct.omap24xxcam_device, %struct.omap24xxcam_device* %23, i32 0, i32 0
  %25 = call i32 @mutex_unlock(i32* %24)
  %26 = load i32, i32* %9, align 4
  ret i32 %26
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @vidioc_int_try_fmt_cap(i32, %struct.v4l2_format*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
